--- a/.env
+++ b/.env
@@ -17,8 +17,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=dienct@dxmb.vn
-MAIL_PASSWORD=Abc123!@#
+MAIL_USERNAME=amthamkiemtien@gmail.com
+MAIL_PASSWORD=whhzbylequwfnrua
 MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
